--- a/resources/cashier.css
+++ b/resources/cashier.css
@@ -1,121 +1,126 @@
-
-
-
-
-
-
-
-.removeItem{
+.removeItem {
     animation-duration: .6s;
     animation-iteration-count: 1;
-    animation-name: rmitem !important; 
+    animation-name: rmitem !important;
 
 }
 
 @keyframes rmitem {
-    50%{
+    50% {
         opacity: 0;
         transform: translateX(-10rem);
     }
 }
 
-.counter-header{
+.counter-header {
     width: 100%;
     display: flex;
     justify-content: space-between;
     padding: 1rem 2rem 1rem 2.5rem;
 }
-.counter-header li:nth-child(1){
+
+.counter-header li:nth-child(1) {
     animation-duration: .7s;
     animation-iteration-count: 1;
     animation-name: cartUIParent1;
     cursor: pointer;
 }
-.counter-header li:nth-child(2){
+
+.counter-header li:nth-child(2) {
     animation-duration: .7s;
     animation-iteration-count: 1;
     animation-name: cartUIParent2;
 }
-.counter-header li:nth-child(2) > *{
-    transform: translateX(0) scale(1.5) rotate(45deg) ;
+
+.counter-header li:nth-child(2)>* {
+    transform: translateX(0) scale(1.5) rotate(45deg);
 
 }
-.counter-header li{
+
+.counter-header li {
     position: relative;
     list-style: none;
 }
-.counter-header li div{
+
+.counter-header li div {
     position: absolute;
     left: -1rem;
     height: .7rem;
     width: .7rem;
     top: 50%;
     border-radius: 50%;
-    transform: translate(-50%,-50%);
-    background-color: rgba(255, 104, 3, 0.795) ;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 104, 3, 0.795);
 
 }
-.noItem{
+
+.noItem {
     font-size: .9rem;
     animation-duration: .7s;
     animation-iteration-count: 1;
     animation-name: cartUIParent1;
 }
+
 @keyframes cartUIParent1 {
-    0%{
+    0% {
         opacity: 0;
         transform: translateX(-3rem);
     }
 }
+
 @keyframes cartUIParent2 {
-    0%{
+    0% {
         opacity: 0;
-        transform: translateX(3rem) ;
+        transform: translateX(3rem);
     }
 }
-.counter-header li div::after{
+
+.counter-header li div::after {
     content: "";
     position: absolute;
     height: 1.8rem;
     width: 1.8rem;
     border-radius: 50%;
-    background-color: rgba(255, 104, 3, 0.219) ;
+    background-color: rgba(255, 104, 3, 0.219);
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     animation-duration: .7s;
     animation-iteration-count: infinite;
     animation-name: cartUI;
 }
 
 @keyframes cartUI {
-    0%{
+    0% {
         opacity: 0;
         height: .5rem;
         width: .5rem;
     }
 }
 
-#counter_body > *{
+#counter_body>* {
     animation-duration: .5s;
     animation-iteration-count: 1;
     animation-name: cartUIOl;
 }
-.nopr{
+
+.nopr {
     width: 100%;
     text-align: center;
     transform: translateY(2rem);
 }
-#removeAllFromCart{
+
+#removeAllFromCart {
     transition: .4s;
 }
-#removeAllFromCart:hover{
-    transform: rotate(135deg) scale(1.5) ;
+
+#removeAllFromCart:hover {
+    transform: rotate(135deg) scale(1.5);
 }
 
 
 @keyframes cartUIOl {
-    0%{
+    0% {
         transform: translate(-3rem);
     }
 }
@@ -125,43 +130,49 @@
     list-style: none;
     position: relative;
 }
-.change-cont{
+
+.change-cont {
     display: block !important;
 }
-.pay-cont > *,
-#addDC{
+
+.pay-cont>*,
+#addDC {
     animation-name: cashierFormAnimate;
     animation-duration: .4s;
     animation-iteration-count: 1;
     transform: translateX(0) rotate(0);
 
 }
+
 @keyframes cashierFormAnimate {
-    0%{
+    0% {
         opacity: 0;
         transform: translateX(3rem) rotate(9deg);
     }
 }
+
 .change-cont,
 .pay-cont,
-.discount-form-cont{
-    z-index:1 ;
+.discount-form-cont {
+    z-index: 1;
     display: none;
     position: absolute;
     top: 40%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
-#pay input:focus{
+#pay input:focus {
     outline: solid 1px rgba(111, 111, 111, 0.616);
 
 }
-#pay input{
+
+#pay input {
     border: none;
     outline: solid 1px rgb(111 111 111 / 40%);
 }
-.change-cont > *,
+
+.change-cont>*,
 #pay {
     gap: .8rem;
     display: flex !important;
@@ -169,87 +180,101 @@
     justify-content: center;
 
 }
-.change-cont > * p{
+
+.change-cont>* p {
     position: absolute;
     bottom: 0;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
-.change-cont > * h4{
+
+.change-cont>* h4 {
     font-size: 2.5rem;
 }
-.change-cont > * {
+
+.change-cont>* {
     position: relative;
 
 }
- 
-.change button:hover{
-background-color: #ffbe0a79;
+
+.change button:hover {
+    background-color: #ffbe0a79;
 
 }
-.change button{
+
+.change button {
     padding: .8rem 2.5rem;
     border: none;
     background-color: #a27c126c;
     border: solid 1px #ffbe0a;
     border-radius: .4rem;
 }
-.actionPay{
+
+.actionPay {
     display: flex;
     justify-content: center;
     gap: 1rem;
     margin-top: 1rem;
 }
+
 .monokai_mode .change button,
 .dark_mode .change button,
 .dark_mode .actionPay button,
-.monokai_mode .actionPay button{
+.monokai_mode .actionPay button {
     color: rgb(199, 199, 199);
 }
-.actionPay button{
+
+.actionPay button {
     padding: .7rem 3.3rem;
     border-radius: .3rem;
     cursor: pointer;
 }
-.actionPay #cancCM{
+
+.actionPay #cancCM {
     border: solid 1px rgba(126, 126, 126, 0.795);
     background-color: #3a3a396e;
 
 }
-.actionPay #cancCM:hover{
+
+.actionPay #cancCM:hover {
     background-color: #50504e;
 
 }
-.actionPay #pay_orders{
+
+.actionPay #pay_orders {
     background-color: #a27c126c;
     border: solid 1px #ffbe0a;
 }
-.actionPay #pay_orders:hover{
-background-color: #ffbe0a79;
+
+.actionPay #pay_orders:hover {
+    background-color: #ffbe0a79;
 
 }
-#CMmoney{
-text-align: start;
+
+#CMmoney {
+    text-align: start;
     height: 3.5rem;
     padding: 0 1.5rem;
     border-radius: .5rem;
     font-size: 1.2rem;
 
 }
-.monokai_mode .change-cont > *,
-.monokai_mode .pay-cont form ,
+
+.monokai_mode .change-cont>*,
+.monokai_mode .pay-cont form,
 .monokai_mode .discount-form {
     background-color: #1E1F1C !important;
 
 }
-.dark_mode .change-cont > *,
+
+.dark_mode .change-cont>*,
 .dark_mode .pay-cont form,
 .dark_mode .discount-form {
     background-color: #181818 !important;
     border: solid 1px rgb(160 160 160 / 18%);
 }
 
-.change-cont > *,
+.change-cont>*,
 .pay-cont form,
 .discount-form {
     background-color: white;
@@ -262,30 +287,37 @@ text-align: start;
     gap: 1rem;
     padding: 1.5rem 0 1rem;
 }
-.pay-cont form{
+
+.pay-cont form {
     height: fit-content;
 }
-.discount-form section p{
+
+.discount-form section p {
     font-size: .8rem;
     position: absolute;
     margin-left: .5rem;
 }
-.products .notification{
+
+.products .notification {
     right: 30%;
     top: 5.1rem;
 
 }
-.discount-form section:nth-child(1) p{
+
+.discount-form section:nth-child(1) p {
     margin-top: .2rem;
 }
-.discount-form section:nth-child(2) p{
+
+.discount-form section:nth-child(2) p {
     transform: translateY(-1rem);
 }
-.discount-form section:nth-child(1){
+
+.discount-form section:nth-child(1) {
     display: grid;
     place-items: center;
 
-} 
+}
+
 .discount-form section:nth-child(2) {
     display: flex;
     justify-content: center;
@@ -299,98 +331,113 @@ text-align: start;
 }
 
 
-.monokai_mode .discount-form section:nth-child(1) input:focus ,
-.monokai_mode .discount-form section:nth-child(2) input:focus ,
-.dark_mode .discount-form section:nth-child(1) input:focus ,
+.monokai_mode .discount-form section:nth-child(1) input:focus,
+.monokai_mode .discount-form section:nth-child(2) input:focus,
+.dark_mode .discount-form section:nth-child(1) input:focus,
 .dark_mode .discount-form section:nth-child(2) input:focus {
     outline: solid 1px rgb(153 153 153);
-    
-}
-.discount-form section:nth-child(1) input:focus ,
-.discount-form section:nth-child(2) input:focus {
-    outline: solid 1px solid 1px rgb(111 111 111 / 85%);
-    
-}
-.discount-form section:nth-child(1) input ,
-.discount-form section:nth-child(2) input {
-    padding: 0 1rem ;
 
 }
+
+.discount-form section:nth-child(1) input:focus,
+.discount-form section:nth-child(2) input:focus {
+    outline: solid 1px solid 1px rgb(111 111 111 / 85%);
+
+}
+
+.discount-form section:nth-child(1) input,
+.discount-form section:nth-child(2) input {
+    padding: 0 1rem;
+
+}
+
 .dark_mode .pay-cont form input,
 .monokai_mode .pay-cont form input,
 .monokai_mode .discount-form section:nth-child(2) select,
-.monokai_mode .discount-form section:nth-child(1) input ,
+.monokai_mode .discount-form section:nth-child(1) input,
 .monokai_mode .discount-form section:nth-child(2) input,
 .dark_mode .discount-form section:nth-child(2) select,
-.dark_mode .discount-form section:nth-child(1) input ,
+.dark_mode .discount-form section:nth-child(1) input,
 .dark_mode .discount-form section:nth-child(2) input {
-    background-color:#181818 ;
+    background-color: #181818;
     color: rgb(199, 199, 199);
     outline: solid 1px rgb(111 111 111 / 85%);
 
 }
-.discount-form section:nth-child(2) select{
+
+.discount-form section:nth-child(2) select {
     padding-left: 1rem;
 }
+
 .discount-form section:nth-child(2) select,
-.discount-form section:nth-child(1) input ,
+.discount-form section:nth-child(1) input,
 .discount-form section:nth-child(2) input {
     height: 2.4rem;
     width: 10rem;
     border-radius: .4rem;
     border: none;
     outline: solid 1px rgba(0, 0, 0, 0.377);
-    background-color:#b3b3b34f ;
+    background-color: #b3b3b34f;
     color: rgb(31, 30, 30);
 }
-.last_dd{
+
+.last_dd {
     display: flex;
     justify-content: center;
     gap: 1rem;
 }
+
 .monokai_mode .last_dd button,
-.dark_mode .last_dd button{
+.dark_mode .last_dd button {
     color: rgb(199, 199, 199);
 }
-.last_dd button{
+
+.last_dd button {
     padding: .4rem 3rem;
     border-radius: .4rem;
 }
-.last_dd button:nth-child(1){
+
+.last_dd button:nth-child(1) {
 
     border: solid 1px rgba(126, 126, 126, 0.795);
     background-color: rgba(77, 77, 77, 0.219);
 }
-.last_dd button:nth-child(1):hover{
+
+.last_dd button:nth-child(1):hover {
     background-color: rgba(77, 77, 77, 0.678);
 
 }
-.last_dd button:nth-child(2):hover{
+
+.last_dd button:nth-child(2):hover {
     background-color: rgba(255, 104, 3, 0.623);
 
 }
-.last_dd button:nth-child(2){
+
+.last_dd button:nth-child(2) {
     border: solid 1px rgba(255, 104, 3, 0.795);
     background-color: rgba(255, 104, 3, 0.219);
 }
-#overlay_cashier{
+
+#overlay_cashier {
     display: none;
     background-color: #000000a1;
     height: 100%;
     width: 100%;
     position: absolute;
 }
-.side_nav{
+
+.side_nav {
     z-index: 2;
 }
- 
-.category_nav_new{
+
+.category_nav_new {
     height: fit-content;
 }
+
 .monokai_mode #gcashNum,
 .monokai_mode #pmethod,
 .dark_mode #gcashNum,
-.dark_mode #pmethod{
+.dark_mode #pmethod {
     background-color: #181818;
     color: rgb(199, 199, 199);
     outline: solid 1px rgb(111 111 111 / 40%);
@@ -398,7 +445,7 @@ text-align: start;
 
 #gcashName,
 #gcashNum,
-#pmethod{
+#pmethod {
     outline: solid 1px rgb(111 111 111 / 40%);
     width: 18.2rem;
     height: 3rem;
@@ -408,7 +455,7 @@ text-align: start;
 }
 
 #gcashName,
-#gcashNum{
+#gcashNum {
     display: none;
     padding: 0 1.5rem;
     text-align: start;
@@ -416,6 +463,77 @@ text-align: start;
 
 }
 
+
+
+
+
+
+
+
+.monokai_mode .products_content .main-dir-link button,
+.dark_mode .products_content .main-dir-link button {
+    color: rgba(255, 255, 255, 0.753);
+    outline: solid 1px rgba(255, 255, 255, 0.466) !important;
+
+}
+
+.monokai_mode .products_content .main-dir-link button {
+    background-color: #1E1F1C;
+    outline: solid 1px rgba(122, 122, 122, 75%);
+
+}
+
+.dark_mode .products_content .main-dir-link button{
+    background-color: #181818;
+    outline: solid 1px rgba(122, 122, 122, 0.233);
+}
+
+
+.products_content>* {
+    list-style: none;
+}
+
+.products_content #page-dir-cont {
+    width: 100%;
+    background: none !important;
+    border: none !important;
+    cursor: default !important;
+}
+
+.products_content #page-dir-cont .main-dir-link {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    width: 100%;
+    max-width: 100% !important;
+    margin-top: 2rem;
+}
+
+.products_content #page-dir-cont .main-dir-link button {
+    height: 2rem;
+    width: 3.5rem;
+    display: grid;
+    place-items: center;
+    border-radius: 1rem;
+    font-size: 1rem;
+    border: none;
+    outline: solid 1px rgba(0, 0, 0, 0.582);
+
+}
+
+.products_content #page-dir-cont .main-dir-link .data-link:hover {
+    background: rgb(212, 88, 5) !important;
+    transition: .2s;
+    cursor: pointer;
+
+}
+
+
+
+
+.products_content #pageON {
+    background: rgb(212, 88, 5) !important;
+}
 
 
 
@@ -433,7 +551,7 @@ text-align: start;
 @media screen and (min-width:1180px) {
 
 
-    .counting{
-        grid-template-rows: 3rem 58% 36% ;
+    .counting {
+        grid-template-rows: 3rem 58% 36%;
     }
 }
