--- a/resources/style.css
+++ b/resources/style.css
@@ -974,10 +974,11 @@ img {
     animation-duration: 1s;
     animation-iteration-count: infinite;
 }
+ 
 
 @keyframes on_notif {
     50% {
-        transform: scale(1.13);
+        transform:  scale(1.13);
     }
 }
 
@@ -1329,9 +1330,56 @@ img {
     animation-delay: -0.1s;
 }
 
+.monokai_mode .loadPa {
+    background: linear-gradient(90deg, #47493e, #47493E, #47493e);
+    border: solid 1px rgb(128 128 128 / 57%);
+    color: white;
+}
 
+.dark_mode .loadPa {
+    background: linear-gradient(90deg, #424242, #1F1F1F, #1F1F1F);
+    border: solid 1px rgba(228, 228, 228, 0.349);
+    color: rgb(199 199 199);
+}
 
+.loadPa {
+    border-radius: .7rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -90%);
+    background: linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255), rgb(255, 255, 255));
+    min-height: 10rem;
+    min-width: 16rem;
+    border: solid 1px rgba(0, 0, 0, 0.349);
+}
 
+.modifPP {
+    outline: solid 1px rgba(173, 0, 253, 0.67) !important;
+}
+.modif {
+    outline: solid 1px rgb(0 253 141 / 67%) !important;
+}
+
+.emptyI {
+    outline: solid 1px rgb(253 28 0 / 67%) !important;
+}
+
+.modifP {
+    outline: solid 2.3px rgb(0, 253, 139) !important;
+}
+
+.emptyIP {
+    outline: solid 2.3px rgb(253, 30, 0) !important;
+}
+
+#loadNt {
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: unset;
+}
 
 
 
